# easy-as-pypi

./: .coveragerc  .editorconfig  .gitignore  .ignore.example  .pyproject.common.tmpl  .pyproject.project.tmpl  .pyproject.tmpl  .readthedocs.yml  .travis.yml  .yamllint  AUTHORS.rst  CODE-OF-CONDUCT.rst  CODE-OF-CONDUCT.tmpl  CONTRIBUTING.rst  CONTRIBUTING.tmpl  HISTORY.rst  MANIFEST.in  Makefile  Makefilesh  Makeout.sh  Maketasks.sh  README.rst  codecov.yml  deps  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: README--GitHub-Setup-for-EAPP.md  README--github-variable-dump--example.rst  README-workflows.md  dependabot.yml  doblabs-dependencies.yml
.github/actions/install-python-and-poetry/: action.yml
.github/actions/load-venv-actions-cache-cache/: action.yml
.github/actions/load-venv-from-cache/: action.yml
.github/actions/load-venv-setup-python-cache/: action.yml
.github/actions/setup-poetry-assets/: action.yml
.github/disabled/: coverity.yml
.github/workflows/: checks-unspecial.yml  checks-versioned.yml  checks.yaml  checks.yml  ci-tags-record-and-report.yml  ci-tags-wrangle.yml  codeql-analysis.yml  coverage-comment-external.yaml  coverage-comment-external.yml  coverage-comment.yaml  coverage-comment.yml  coverity.yml  readthedocs-preview.yaml  readthedocs-preview.yml  release-github.yml  release-pypi.yml  release-smoke-test.yml  spread-updates.yml  sprout-updates.yml  update-cascade.yml  update-deps-poetry.yml  update-deps.yml  update-merged.yml
.pyproject-doc8/: pyproject.toml
.pyproject-prerelease/: pyproject.toml
docs/: .ignore  Makefile  conf.py  easy-as-pypi.rst  easy_as_pypi.commands.rst  easy_as_pypi.rst  history-ci.md  index.rst  index.tmpl  installation.rst  installation.tmpl  license.rst  make.bat  make.tmpl  modules.rst  modules.tmpl  pypi-and-die.rst  release-ghub-pypi.rst  release_ghub_pypi.rst
easy_as_pypi/: __init__.py
easy_as_pypi/commands/: __init__.py  easy_as_pypi.py
locale/: babel.cfg
locale/de/LC_MESSAGES/: messages.po
locale/en/LC_MESSAGES/: messages.po
pypi_and_die/: __init__.py
pypi_and_die/commands/: __init__.py
release_ghub_pypi/: __init__.py
release_ghub_pypi/commands/: release_ghub_pypi.py
requirements/: release.pip  test.pip
src/easy_as_pypi/: __init__.py
src/easy_as_pypi/commands/: __init__.py  easy_as_pypi.py
src/easy_as_pypi/locale/: messages.pot
src/easy_as_pypi/locale/de/LC_MESSAGES/: messages.mo  messages.po
src/easy_as_pypi/locale/en/LC_MESSAGES/: messages.mo  messages.po
tests/: __init__.py  conftest.py
tests/easy_as_pypi/: __init__.py  test_easy_as_pypi.py
tests/release_ghub_pypi/: __init__.py  test_release_ghub_pypi.py
